# itmo

./: .gitattributes  .gitignore  .gitmodules  BIBLE.md  CONTRIBUTING.md  README.md
.docs/tap-tap/: README.md
.github/: CONTRIBUTING.md  FUNDING.yml
1 информатика/: README.md
1 информатика/аннотации/: 06.12.2022 Барсуков.doc  08.11.2022 Барсуков.doc  11.10.2022 Барсуков.doc  13.09.2022 Барсуков.doc  README.md
1 информатика/лабораторные/: README.md
1 история/: README.md
1 история/другое/: Барокко. Ответы на вопросы. Барсуков Максим, ИЗРК 1.2-22-О.docx  Италия на берегах Невы. Ответы на вопросы. Барсуков Максим, P3115, ИЗРК 1.2-22-О.docx
1 история/практика/: README.md
1 история/проект/: README.md
1 история/тесты/: README.md
1-2 дискретная математика/: README.md
1-2 дискретная математика/базовая/: README.md  ДЗ 1.docx  ДЗ 2.docx  ДЗ 3.docx  ДЗ 4.docx  ДЗ 5.docx  ДЗ 6.docx  Курсовая работа по дискретной математике, 2 семестр, Барсуков М. А. Р3115.docx
1-2 дискретная математика/продвинутая/: README.md
1-2 линейная алгебра/: README.md
1-2 линейная алгебра/кр/: kr-2021-p-full.jfif  kr1-2022.jfif  kr2-2021.jfif  kr3-2021-разбор.md  kr3-2021.jfif  kr3-2022.jfif
1-2 опд/: README.md
1-2 опд/доп/: README.md  dma.drawio  dma.md  Виртуальная память.pptx  перевод строки в число.basm  перевод строки в число.basm_mod
1-2 опд/лабораторные/: README.md
1-2 опд/лекции/: bcomp-ng-microprogram.txt  Таблица кодов БЭВМ.docx
1-2 опд/микрокр/: README.md
1-2 опд/рубежки/: 3.md  README.md
1-2 опд/экзамен/: README.md  Вопросы к экзамену ОПД 2020-2021.jfif
1-2 программирование/: README.md
1-2 программирование/экзамен/: README.md  Билеты_по_проге.docx
1-3 математика/: README.md
1-3 математика/базовая/: README.md
1-3 математика/продвинутая/: README.md
1-6 английский язык/: README.md
1-6 английский язык/essays/: 1. Essay, Barsukov Maxim.docx  5. Essay, Barsukov Maxim.docx
1-6 английский язык/homeworks/: U5 Барсуков Максим.docx  Барсуков Максим HW4.docx
2 базы данных/: README.md
2 базы данных/микрокр/: README.md
2 базы данных/рубежка/: README.md
2 базы данных/экзамен/: README.md  Экзамен.docx
2 бжд/: README.md
2 бжд/лабораторные/: Барсуков Максим P3115. Безопасность в путешествиях.docx  Барсуков Максим P3115. Безопасность при ЧС. Пожар.docx  Барсуков Максим P3115. Выявление небезопасных финансовых операций.docx  Барсуков Максим P3115. Исследование качества своего сна.docx  Барсуков Максим P3115. Расчет индивидуального меню.docx  Барсуков Максим P3115. Страх и его преодоление.docx
2 бжд/тесты/: README.md
2 кик/: README.md  Эссе.docx
3 бмс/: README.md
3 веб/: README.md
3 теорвер/: README.md
3 теорвер/практики/: Практика 4.pptx
3 япы/: README.md
3 япы/лабораторные/assignment-3-image-rotation/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  README.md  clang-tidy-checks.txt  cmake-variants.yaml  common-mistakes.md
3 япы/лабораторные/assignment-3-image-rotation/docs/: CLion.md  Terminal.md  VSCode.md  Visual Studio.md
3 япы/лабораторные/assignment-3-image-rotation/solution/: CMakeLists.txt  compile_flags.txt
3 япы/лабораторные/assignment-3-image-rotation/solution/include/: image.h  rotator.h  validation.h
3 япы/лабораторные/assignment-3-image-rotation/solution/src/: image.c  io.c  main.c  rotator.c  validation.c
3 япы/лабораторные/assignment-3-image-rotation/tester/: CMakeLists.txt  compile_flags.txt  tester.cmake  tester.sh
3 япы/лабораторные/assignment-3-image-rotation/tester/include/: bmp.h  cmp.h  common.h  dimensions.h  file_cmp.h  image.h  io.h
3 япы/лабораторные/assignment-3-image-rotation/tester/src/: bmp.c  file_cmp.c  main.c  util.c
3 япы/лабораторные/assignment-3-image-rotation/tester/tests/: .gitignore
3 япы/лабораторные/assignment-4-memory-allocator/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
3 япы/лабораторные/assignment-4-memory-allocator/src/: CMakeLists.txt  main.c  mem.c  mem.h  mem_debug.c  mem_internals.h  util.c  util.h
3 япы/лабораторные/assignment-4-memory-allocator/tester/: CMakeLists.txt
3 япы/лабораторные/assignment-4-memory-allocator/tester/src/: test.h  test_utils.c  test_utils.h
3 япы/лабораторные/assignment-4-memory-allocator/tester/tests/: _free.c  alloc_region.c  find_good_or_last.c  grow_heap.c  heap_init.c  heap_term.c  memalloc.c  split_if_too_big.c  try_memalloc_existing.c  try_merge_with_next.c
3-4 физика/: README.md
4 аисд/: README.md
4 аисд/обязательные задачи/: .gitignore
4 архитектура компьютера/: README.md
4 архитектура компьютера/lab1/: README.md  text.docx
4 архитектура компьютера/lab2/: README.md  my_reviews1.docx  my_reviews3.docx
4 вычмат/: README.md
4 опи/: README.md
4 тпв/: Выступление 1. Скрипт.txt  Выступление 1. Сообщение.txt  Выступление.pptx  ТПВ_Эссе_Барсуков_6.2.docx
5 апс/: README.md
5 информационные системы/: README.md
5 ппи/: README.md
5 сии/: README.md
5 сии/лабораторные/lab2/: .editorconfig  .gitattributes  .gitignore  .markdownlint.yml  Makefile  README.md  pyproject.toml
5 сии/лабораторные/lab2/src/: main.py
5 сии/лабораторные/lab2/src/methods/: can_fabricate_war_goal.py  can_form_alliance.py  can_go_throw_strait.py  find_countries_at_war.py  find_countries_by_ideology.py  find_countries_in_alliance.py  find_countries_near_sea.py  find_defensive_countries.py  get_countries_by_division.py  get_population.py  get_possible_allied_countries.py  get_puppets.py  get_recruits_number.py  get_relationship.py
5 сии/лабораторные/lab2/src/prolog/: knowledge_base.pl
6 рмп/: README.md
6 свв/: README.md
6 сети/: README.md
6 тпо/: README.md
7 инфобез/: README.md
7 распределенные вычисления/: .editorconfig  .gitignore  README.md
7 соа/: README.md
7 эпи/: README.md
английский язык/: README.md
базовая математика/: README.md
дискретная математика/: README.md
информатика/: README.md
история/: README.md
линейная алгебра/: README.md
математика/: README.md
опд/: README.md
опд/доп/: dop.c  (+5 more)
программирование/: README.md
прочее/: README.md  election.md  individual-learning-track.md
(+1839 files in other folders)
